--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <title>MGX metagenome analysis platform</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
-<meta name="description" content="Hugo Whisper is a documentation theme built with Hugo." />
+<meta name="description" content="MGX metagenome analysis platform" />
 <meta property="og:title" content="MGX metagenome analysis platform" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://hugo-whisper.netlify.app" />
-<meta property="og:image" content="https://raw.githubusercontent.com/JugglerX/hugo-whisper-theme/master/images/tn.png" />
-<meta property="og:description" content="Hugo Whisper is a documentation theme built with Hugo." />
+<meta property="og:url" content="" />
+<meta property="og:image" content="" />
+<meta property="og:description" content="MGX metagenome analysis platform" />
 <meta name="twitter:card" content="" />
 <meta name="twitter:site" content="" />
 <meta name="twitter:creator" content="" />
